--- a/css/app.css
+++ b/css/app.css
@@ -9,34 +9,101 @@ body {
 }
 
 .deck {
-  max-width: 690px;
+  max-width: 40%;
+  padding: 20px 10px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: center;
+  justify-content: center;
+  background-color: yellow;
 }
 
 .deck .card {
   display: flex;
-  margin: 5px;
+  margin: 10px;
   padding: 15px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
+  background-color: #00cec9;
   height: 120px;
-  width: 130px;
-  font-size: 80px;
-  list-style: none;
-  align-content: center;
+  width: 120px;
   justify-content: center;
-}
-
-.selected {
-  border: 4px solid blue;
-}
-
-.match {
-  border: 4px solid red;
   font-size: 0;
+  cursor: pointer;
+}
+
+.deck .card.selected {
+  transform: rotateY(0);
+  font-size: 80px;
+	background: #02b3e4;
+	animation-name: flipInY;
+	-webkit-backface-visibility: visible !important;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
+}
+
+.deck .card.match {
+  background-color: red;
+  font-size: 80px;
+  animation-name: rubberBand;
+	-webkit-backface-visibility: visible !important;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
+}
+
+@keyframes flipInY {
+	from {
+		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+
+	40% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		animation-timing-function: ease-in;
+	}
+
+	60% {
+		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		opacity: 1;
+	}
+
+	80% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+	}
+
+	to {
+		transform: perspective(400px);
+	}
+}
+
+@keyframes rubberBand {
+	from {
+		transform: scale3d(1, 1, 1);
+	}
+
+	30% {
+		transform: scale3d(1.25, 0.75, 1);
+	}
+
+	40% {
+		transform: scale3d(0.75, 1.25, 1);
+	}
+
+	50% {
+		transform: scale3d(1.15, 0.85, 1);
+	}
+
+	65% {
+		transform: scale3d(.95, 1.05, 1);
+	}
+
+	75% {
+		transform: scale3d(1.05, .95, 1);
+	}
+
+	to {
+		transform: scale3d(1, 1, 1);
+	}
 }
