--- a/css/app.css
+++ b/css/app.css
@@ -1,21 +1,74 @@
+html {
+    box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  margin: 20px 0;
+  background: url('../img/shapes.jpg');
+  background-size: contain;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h1 {
+  color: #e5065a;
+  margin: 0;
+}
+
+.score-panel {
+	text-align: left;
+  width: 30%;
+  margin: 25px 0 5px 0;
+  font-size: 20px;
+  color: #f97a05;
+}
+
+.score-panel .stars{
+  display: inline-block;
+  margin: 0 20px 0 0;
+}
+
+.score-panel .stars li {
+	list-style: none;
+	display: inline-block;
+}
+
+.score-panel .restart {
+	float: right;
+	cursor: pointer;
+  font-size: 25px;
+  margin-right: 30px;
+  color: #049960  ;
 }
 
 .deck {
-  max-width: 40%;
-  padding: 20px 10px;
+  max-width: 30%;
+  padding: 20px 0;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: yellow;
+  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  border-radius: 20px;
 }
 
 .deck .card {
@@ -25,85 +78,140 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #00cec9;
+  background-color: #84767e;
+  border-radius: 10px;
   height: 120px;
   width: 120px;
   justify-content: center;
+  align-items: center;
   font-size: 0;
   cursor: pointer;
+  color: white;
 }
 
 .deck .card.selected {
-  transform: rotateY(0);
-  font-size: 80px;
-	background: #02b3e4;
-	animation-name: flipInY;
-	-webkit-backface-visibility: visible !important;
+  font-size: 50px;
+	background: #3672d6;
+	animation-name: flipInX;
 	backface-visibility: visible !important;
 	animation-duration: .75s;
+  pointer-events: none;
 }
 
 .deck .card.match {
-  background-color: red;
-  font-size: 80px;
-  animation-name: rubberBand;
-	-webkit-backface-visibility: visible !important;
+  background-color: #47ea15;
+  font-size: 50px;
+  animation-name: tada;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
+  pointer-events: none;
+}
+
+.deck .card.unmatched {
+  font-size: 50px;
+	background: #EF6F7F;
+	animation-name: shake;
 	backface-visibility: visible !important;
 	animation-duration: .75s;
 }
 
-@keyframes flipInY {
-	from {
-		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
-		animation-timing-function: ease-in;
-		opacity: 0;
-	}
-
-	40% {
-		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
-		animation-timing-function: ease-in;
-	}
-
-	60% {
-		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
-		opacity: 1;
-	}
-
-	80% {
-		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
-	}
-
-	to {
-		transform: perspective(400px);
-	}
+@keyframes flipInX {
+0% {
+-webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+-webkit-transition-timing-function: ease-in;
+transition-timing-function: ease-in;
+opacity: 0;
+}
+40% {
+-webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+-webkit-transition-timing-function: ease-in;
+transition-timing-function: ease-in;
+}
+60% {
+-webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+opacity: 1;
+}
+80% {
+-webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+}
+100% {
+-webkit-transform: perspective(400px);
+transform: perspective(400px);
+}
 }
 
-@keyframes rubberBand {
-	from {
-		transform: scale3d(1, 1, 1);
-	}
+@keyframes tada{
+  0% {
+    transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
+  }
+  10% {
+    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  30% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  40% {
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  60% {
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  70% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  100% {
+    transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
+  }
+}
 
-	30% {
-		transform: scale3d(1.25, 0.75, 1);
-	}
-
-	40% {
-		transform: scale3d(0.75, 1.25, 1);
-	}
-
-	50% {
-		transform: scale3d(1.15, 0.85, 1);
-	}
-
-	65% {
-		transform: scale3d(.95, 1.05, 1);
-	}
-
-	75% {
-		transform: scale3d(1.05, .95, 1);
-	}
-
-	to {
-		transform: scale3d(1, 1, 1);
-	}
+@keyframes shake{
+  0% {
+    transform:  translate(0px,0px)  ;
+  }
+  10% {
+    transform:  translate(-10px,0px)  ;
+  }
+  20% {
+    transform:  translate(10px,0px)  ;
+  }
+  30% {
+    transform:  translate(-10px,0px)  ;
+  }
+  40% {
+    transform:  translate(10px,0px)  ;
+  }
+  50% {
+    transform:  translate(-10px,0px)  ;
+  }
+  60% {
+    transform:  translate(10px,0px)  ;
+  }
+  70% {
+    transform:  translate(-10px,0px)  ;
+  }
+  80% {
+    transform:  translate(10px,0px)  ;
+  }
+  90% {
+    transform:  translate(-10px,0px)  ;
+  }
+  100% {
+    transform:  translate(0px,0px)  ;
+  }
 }
