--- a/css/app.css
+++ b/css/app.css
@@ -24,9 +24,9 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
 h1 {
@@ -37,14 +37,14 @@ h1 {
 .score-panel {
 	text-align: left;
   width: 30%;
-  margin: 25px 0 5px 0;
-  font-size: 20px;
+  margin: 1.5625em 0 0.3125em 0;
+  font-size: 1.25em;
   color: #f97a05;
 }
 
 .score-panel .stars{
   display: inline-block;
-  margin: 0 20px 0 0;
+  margin: 0 1.25em 0 0;
 }
 
 .score-panel .stars li {
@@ -55,20 +55,20 @@ h1 {
 .score-panel .restart {
 	float: right;
 	cursor: pointer;
-  font-size: 25px;
-  margin-right: 30px;
+  font-size: 1.5625em;
+  margin-right: 1.875em;
   color: #049960  ;
 }
 
 .deck {
-  max-width: 30%;
-  padding: 20px 0;
+  max-width: 40%;
+  padding: 1.25em 0;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-  border-radius: 20px;
+  border-radius: 1.25em;
 }
 
 .deck .card {
@@ -90,7 +90,7 @@ h1 {
 }
 
 .deck .card.selected {
-  font-size: 50px;
+  font-size: 3.125em;
 	background: #3672d6;
 	animation-name: flipInX;
 	backface-visibility: visible !important;
@@ -100,7 +100,7 @@ h1 {
 
 .deck .card.match {
   background-color: #47ea15;
-  font-size: 50px;
+  font-size: 3.125em;
   animation-name: tada;
 	backface-visibility: visible !important;
 	animation-duration: .75s;
@@ -108,11 +108,15 @@ h1 {
 }
 
 .deck .card.unmatched {
-  font-size: 50px;
+  font-size: 3.125em;
 	background: #EF6F7F;
 	animation-name: shake;
 	backface-visibility: visible !important;
 	animation-duration: .75s;
+}
+
+.disabled {
+  pointer-events: none;
 }
 
 @keyframes flipInX {
