--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-  background: url('../img/shapes.jpg');
+  background: url('../img/mountain.png');
   background-size: contain;
   font-family: 'Titillium Web', sans-serif;
 }
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-  color: #e5065a;
+  color: #1ea896;
   margin: 0;
 }
 
@@ -39,7 +39,8 @@ h1 {
   width: 30%;
   margin: 0.3125em auto;
   font-size: 1.25em;
-  color: #f97a05;
+  color: #454851;
+  font-weight: bold;
 }
 
 .score-panel .stars{
@@ -50,6 +51,7 @@ h1 {
 .score-panel .stars li {
 	list-style: none;
 	display: inline-block;
+  color: #f97a05;
 }
 
 .score-panel .restart {
@@ -57,7 +59,6 @@ h1 {
 	cursor: pointer;
   font-size: 1em;
   margin-right: 1.875em;
-  color: #049960  ;
 }
 
 .deck {
@@ -67,7 +68,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background: linear-gradient(225deg, #f49e85, #ffc576, #74B0D8);
+  background: linear-gradient(225deg, #f49e85, #ffc576, #74b0d8);
   border-radius: 1.25em;
 }
 
@@ -109,7 +110,7 @@ h1 {
 
 .deck .card.unmatched {
   font-size: 3.125em;
-	background: #EF6F7F;
+	background: #ef6f7f;
 	animation-name: shake;
 	backface-visibility: visible !important;
 	animation-duration: .75s;
@@ -117,6 +118,12 @@ h1 {
 
 .disabled {
   pointer-events: none;
+}
+
+.timer{
+  display: inline-block;
+  margin: 0 0.625em;
+
 }
 
 @keyframes flipInX {
