--- a/css/app.css
+++ b/css/app.css
@@ -1,19 +1,16 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
-html,
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -23,10 +20,10 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -34,8 +31,12 @@ h1 {
   margin: 0;
 }
 
+h3 {
+  margin: auto;
+}
+
 .score-panel {
-	text-align: left;
+  text-align: left;
   width: 30%;
   margin: 0.3125em auto;
   font-size: 1.25em;
@@ -43,20 +44,20 @@ h1 {
   font-weight: bold;
 }
 
-.score-panel .stars{
+.score-panel .stars {
   display: inline-block;
   margin: 0 1.25em 0 0;
-}
-
-.score-panel .stars li {
-	list-style: none;
-	display: inline-block;
   color: #f97a05;
 }
 
+.score-panel .stars li {
+  list-style: none;
+  display: inline-block;
+}
+
 .score-panel .restart {
-	float: right;
-	cursor: pointer;
+  float: right;
+  cursor: pointer;
   font-size: 1em;
   margin-right: 1.875em;
 }
@@ -92,10 +93,10 @@ h1 {
 
 .deck .card.selected {
   font-size: 3.125em;
-	background: #3672d6;
-	animation-name: flipInX;
-	backface-visibility: visible !important;
-	animation-duration: .75s;
+  background: #3672d6;
+  animation-name: flipInX;
+  backface-visibility: visible !important;
+  animation-duration: .75s;
   pointer-events: none;
 }
 
@@ -103,126 +104,178 @@ h1 {
   background-color: #29a535;
   font-size: 3.125em;
   animation-name: tada;
-	backface-visibility: visible !important;
-	animation-duration: .75s;
+  backface-visibility: visible !important;
+  animation-duration: .75s;
   pointer-events: none;
 }
 
 .deck .card.unmatched {
   font-size: 3.125em;
-	background: #ef6f7f;
-	animation-name: shake;
-	backface-visibility: visible !important;
-	animation-duration: .75s;
+  background: #ef6f7f;
+  animation-name: shake;
+  backface-visibility: visible !important;
+  animation-duration: .75s;
 }
 
 .disabled {
   pointer-events: none;
 }
 
-.timer{
+.timer {
   display: inline-block;
   margin: 0 0.625em;
+}
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-content {
+  background-color: ghostwhite;
+  border-radius: 1em;
+  margin: 15% auto;
+  width: 50%;
+  padding: 1em;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  top: 30%;
+  right: 26%;
+}
+
+.close:hover, .close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+#final-rating li {
+  display: inline;
+  color: #f97a05;
+}
+
+.play-again {
+  border-radius: 0.5em;
+  background-color: royalblue;
+  color: white;
+  display: inline;
+  padding: 0.5em 5em;
+}
+
+.play-again:hover, .play-again:focus {
+  color: greenyellow;
+  cursor: pointer;
 }
 
 @keyframes flipInX {
-0% {
--webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
--webkit-transition-timing-function: ease-in;
-transition-timing-function: ease-in;
-opacity: 0;
-}
-40% {
--webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
--webkit-transition-timing-function: ease-in;
-transition-timing-function: ease-in;
-}
-60% {
--webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
-opacity: 1;
-}
-80% {
--webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
-}
-100% {
--webkit-transform: perspective(400px);
-transform: perspective(400px);
-}
-}
-
-@keyframes tada{
   0% {
-    transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
-  }
-  10% {
-    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
-  }
-  20% {
-    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
-  }
-  30% {
-    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    opacity: 0;
   }
   40% {
-    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
-  }
-  50% {
-    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
   }
   60% {
-    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
-  }
-  70% {
-    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
   }
   80% {
-    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
-  }
-  90% {
-    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
   }
   100% {
-    transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
   }
 }
 
-@keyframes shake{
+@keyframes tada {
   0% {
-    transform:  translate(0px,0px)  ;
+    transform: rotate(0deg) scaleX(1.00) scaleY(1.00);
   }
   10% {
-    transform:  translate(-10px,0px)  ;
+    transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
   }
   20% {
-    transform:  translate(10px,0px)  ;
+    transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
   }
   30% {
-    transform:  translate(-10px,0px)  ;
+    transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
   }
   40% {
-    transform:  translate(10px,0px)  ;
+    transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
   }
   50% {
-    transform:  translate(-10px,0px)  ;
+    transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
   }
   60% {
-    transform:  translate(10px,0px)  ;
+    transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
   }
   70% {
-    transform:  translate(-10px,0px)  ;
+    transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
   }
   80% {
-    transform:  translate(10px,0px)  ;
+    transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
   }
   90% {
-    transform:  translate(-10px,0px)  ;
+    transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
   }
   100% {
-    transform:  translate(0px,0px)  ;
+    transform: rotate(0deg) scaleX(1.20) scaleY(1.20);
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  10% {
+    transform: translate(-10px, 0px);
+  }
+  20% {
+    transform: translate(10px, 0px);
+  }
+  30% {
+    transform: translate(-10px, 0px);
+  }
+  40% {
+    transform: translate(10px, 0px);
+  }
+  50% {
+    transform: translate(-10px, 0px);
+  }
+  60% {
+    transform: translate(10px, 0px);
+  }
+  70% {
+    transform: translate(-10px, 0px);
+  }
+  80% {
+    transform: translate(10px, 0px);
+  }
+  90% {
+    transform: translate(-10px, 0px);
+  }
+  100% {
+    transform: translate(0px, 0px);
   }
 }
